# content_generator

./: .env.example  .python-version  CHANGELOG.md  Makefile  README.md  auto_generation.py  celeryconfig.py  config.py  external_sources.py  pipeline.py  pyproject.toml  rewrite.py
docker/: Dockerfile  docker-compose.local.yml  docker-compose.yml
enums/: base.py
schemas/: base.py
src/api/: main.py  routes.py  schemas.py
src/core/: celery_utils.py  celeryconfig.py  config.py  pipeline.py  rewrite.py  tasks.py
src/enums/: base.py
src/schemas/: base.py
src/static/: styles.css
src/static/js/: articles.js  content_plan.js
src/templates/: article_detail.html  article_list.html  content_plan_result.html  index.html  layout.html  task_detail.html  task_list.html
src/tests/: test_generate_update_articles.py
src/utils/: auto_generation.py  external_sources.py
tests/: test_generate_update_articles.py
utils/: base.py
