[project]
name = "content-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "VasiliySilver",email = "svaaugust@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "commitizen (>=4.2.2,<5.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "pydantic-ai[groq] (>=0.0.24,<0.0.25)",
    "groq (>=0.18.0,<0.19.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "socksio (>=1.0.0,<2.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "fastapi (>=0.70.0,<1.0.0)",
    "uvicorn (>=0.15.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
